--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,16 @@ __pycache__
 .venv
 *.egg-info
 
+
+clients/Client1_cdk/code_repo/.ipynb_checkpoints
+clients/Client2_cdk/code_repo/.ipynb_checkpoints
+clients/Client1_cdk/local_dataset/.ipynb_checkpoints
+clients/Client2_cdk/local_dataset/.ipynb_checkpoints
+clients/Client1_cdk/models/.ipynb_checkpoints
+clients/Client2_cdk/models/.ipynb_checkpoints
+clients/.DS_Store
+server/__init__.py
+
 # CDK asset staging directory
 .cdk.staging
 cdk.out
